[MS] Cache module dependencies in docker build

--- a/market-spider/Dockerfile
+++ b/market-spider/Dockerfile
@@ -12,10 +12,12 @@ RUN apk add --no-cache --virtual .build-deps \
 RUN update-ca-certificates
 
 RUN mkdir build
+COPY go.mod go.sum ./build/
+RUN cd ./build/ && go mod graph | awk '{if ($1 !~ "@") print $2}' | xargs go get
+
 COPY . /build
 WORKDIR /build
 
-RUN go get
 RUN go build -ldflags '-extldflags "-static"' -o market-spider .
 RUN adduser -S -D -H -h /build market-spider
 USER market-spider
