--- a/price-api/package.json
+++ b/price-api/package.json
@@ -2,13 +2,15 @@
   "name": "obfsi_api",
   "version": "1.0.0",
   "description": "Obfsi api",
-  "main": "index.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "repository": "https://github.com/JRaams/obfsi/",
   "author": "JRaams",
   "license": "MIT",
   "dependencies": {
-    "@polka/send-type": "^0.5.2",
     "body-parser": "^1.19.0",
+    "express-graphql": "^0.12.0",
     "graphql": "^15.4.0",
     "polka": "^0.5.2"
   }
