--- a/price-api/package.json
+++ b/price-api/package.json
@@ -4,9 +4,9 @@
   "description": "Obfsi api",
   "scripts": {
     "start": "node server.js",
-    "lint": "eslint ./",
-    "lint-fix": "eslint ./ --fix",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\""
+    "lint": "eslint src/",
+    "lint-fix": "eslint src/ --fix",
+    "format": "prettier --write \"src/**/*.{js,json,md}\""
   },
   "repository": "https://github.com/JRaams/obfsi/",
   "author": "JRaams",
@@ -25,6 +25,17 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.2.1",
-    "prettier": "^2.2.1"
+    "husky": "^4.3.7",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0"
+  },
+  "lint-staged": {
+    "src/**/*.js": "eslint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && pretty-quick --staged"
+    }
   }
 }
